--- a/src/libraries/libcommon/libcommon.vcxproj
+++ b/src/libraries/libcommon/libcommon.vcxproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <ClInclude Include="include\tstring.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="tstring.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
