--- a/src/libraries/libnetutil/libnetutil.vcxproj
+++ b/src/libraries/libnetutil/libnetutil.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="include\uri.hpp" />
     <ClInclude Include="uri_impl.hpp" />
     <ClInclude Include="uri_parser.hpp" />
+    <ClInclude Include="uri_tokens.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="uri.cpp" />
